--- a/config/nginx/hello.conf
+++ b/config/nginx/hello.conf
@@ -3,7 +3,7 @@ server {
     server_name hello.loc;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/hello;
+    root /var/www/hello/public;
 
     location ~ \.php$ {
         try_files $uri =404;
