--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,13 +33,16 @@ services:
     volumes:
       - ./sites:/var/www
       - ./config/php/php.ini:/usr/local/etc/php/php.ini
+    environment:
+      XDEBUG_CONFIG: "remote_host=host.docker.internal remote_enable=1"
+      PHP_IDE_CONFIG: "serverName=Docker"
     ports:
       - "9000:9000"
     networks:
       - internal
 
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0.22
     container_name: mysql
     restart: unless-stopped
     command: --default-authentication-plugin=mysql_native_password
